# Asteria

./: .gitignore  Asteria.desktop  CHANGELOG.md  CMakeLists.txt  CREDITS.txt  Globals.cpp  Globals.h  LICENSE  README.md  RELEASES.md  aspectarianwidget.cpp  aspectarianwidget.h  aspectsettingsdialog.cpp  aspectsettingsdialog.h  chartcalculator (copy 1).cpp  chartcalculator.cpp  chartcalculator.h  chartdatamanager.cpp  chartdatamanager.h  chartrenderer.cpp  chartrenderer.h  chartwidget.cpp  chartwidget.h  donationdialog.cpp  elementmodalitywidget.cpp  elementmodalitywidget.h  flatlibinvoke.txt  info  io.github.alamahant.Asteria.appdata.xml  io.github.alamahant.Asteria.desktop  io.github.alamahant.Asteria.metainfo.xml  io.github.alamahant.Asteria.yaml  io.github.alamahant.Asteria.yaml-bak  io.github.alamahant.Asteria.yml  main.cpp  mainwindow.cpp  mainwindow.h  make-portable-venv.sh  map.qml  mistralapi.cpp  (+14 more)
.github/: FUNDING.yml
